@@ -42,7 +42,10 @@ namespace Mono.Xaml
 	unsafe internal delegate bool SetPropertyCallback (XamlCallbackData *data, string xmlns, Value* target, IntPtr target_data, Value* target_parent, string prop_xmlns, string name, Value* value, IntPtr value_data, ref MoonError error);
 	unsafe internal delegate bool ImportXamlNamespaceCallback (XamlCallbackData *data, string xmlns, ref MoonError error);
 	unsafe internal delegate bool AddChildCallback (XamlCallbackData *data, Value* parent_parent, [MarshalAs (UnmanagedType.U1)] bool parent_is_property, string parent_xmlns, Value *parent, IntPtr parent_data, Value* child, IntPtr child_data, ref MoonError error);
-	
+
+	unsafe internal delegate IntPtr ParseTemplateFunc (Value *context, string resource_base, IntPtr surface, IntPtr binding_source, string xaml, ref MoonError error);
+
+
 	internal struct XamlLoaderCallbacks {
 		public LookupObjectCallback lookup_object;
 		public CreateGCHandleCallback create_gchandle;
